# kokkos-remote-spaces

./: CMakeLists.txt  KokkosRemoteConfig.cmake.in  KokkosRemoteSpacesConfig.cmake.in  LICENSE  Makefile.kokkos-remote-spaces  README.md
.jenkins/: continuous.groovy
applications/: CMakeLists.txt
applications/cgsolve/: CMakeLists.txt
applications/cgsolve/mpi/: CMakeLists.txt  cgsolve.cpp  generate_matrix.hpp  presend.hpp
applications/cgsolve/rma/: CMakeLists.txt  cgsolve.cpp  comm.hpp  generate_matrix.hpp
applications/cgsolve/scripts/: run_over_size.sh
applications/cgsolve/serial/: CMakeLists.txt  cgsolve.cpp  generate_matrix.hpp
applications/empty_project/: project.cpp  project.hpp
applications/heat3d/: CMakeLists.txt
applications/heat3d/more_opt_rma/: CMakeLists.txt  heat3d.cpp
applications/heat3d/mpi/: Makefile  heat3d.cpp
applications/heat3d/opt_rma/: CMakeLists.txt  comm.hpp  heat3d.cpp
applications/heat3d/partitioned_rma/: CMakeLists.txt  heat3d.cpp
applications/heat3d/rma/: CMakeLists.txt  Makefile  heat3d.cpp
applications/heat3d/scripts/: run_over_size.sh
applications/matvec/: CMakeLists.txt
applications/matvec/multi-node/: matvec.cpp
applications/vectorshift/: CMakeLists.txt
benchmarks/access_overhead/: CMakeLists.txt  access_overhead.cpp  access_overhead_noThis.cpp  access_overhead_p2p.cpp  access_overhead_p2p_kernelconf.cpp  access_overhead_stream.cpp  access_overhead_teams.cpp
benchmarks/misslatency/: misslatency.cpp  misslatency_partitioned.cpp
benchmarks/poissonaccess/: CMakeLists.txt  poissonaccess.cpp
benchmarks/randomaccess/: CMakeLists.txt  randomaccess.cpp
benchmarks/stream/: access_overhead_stream.cpp  run_stream_over_size.sh
examples/: CMakeLists.txt
examples/benchmark/: .Makefile.swo  KokkosCore_config.tmp  Makefile  main.cpp
examples/benchmarks/: CMakeLists.txt
examples/benchmarks/stream/: CMakeLists.txt  access_overhead_1node.cpp  stream_benchmark.cpp  stream_benchmark_2node.cpp  stream_benchmark_nnode.cpp
examples/cg/: Makefile  cmake_install.cmake
examples/cg-solve/parallel/: CMakeLists.txt  GenerateMatrix.hpp  Makefile  cgsolve.cpp
examples/cgsolve/: CMakeLists.txt  tmp_cgsolve.cpp
examples/cgsolve/parallel/: CMakeLists.txt  Makefile  cgsolve  cgsolve.cpp  generate_matrix.hpp
examples/copy_benchmarks/: CMakeLists.txt
examples/copy_benchmarks/single-node/: CMakeLists.txt  oldview_cpybench.cpp  partitioned_rma_cpybench.cpp  rma_cpybench.cpp  unmanaged_rma_cpybench.cpp  view_cpybench.cpp
examples/empty_project/: CMakeLists.txt
examples/experimental/: CMakeLists.txt
examples/heat3d/: CMakeLists.txt
examples/hello_world_quo/: Makefile  main.cpp
examples/miss-latency/: latency.cpp
examples/monolithic_view/: CMakeLists.txt  Makefile  main.cpp
examples/poisson-misses/: poisson.cpp
examples/randomaccess/: CMakeLists.txt  Makefile  cmake_install.cmake  randomaccess  randomaccess.cpp
examples/symmetric_view/: CMakeLists.txt  Makefile  main.cpp  out
modules/: FindIBVERBS.cmake  FindNVSHMEM.cmake  FindQUO.cmake  FindROCSHMEM.cmake  FindSHMEM.cmake
scripts/: apply-clang-format
scripts/docker/: Dockerfile.clang  Dockerfile.nvshmem  Dockerfile.openmpi
src/: Kokkos_RemoteSpaces.hpp  Kokkos_RemoteSpaces_DeepCopy.hpp  Kokkos_RemoteSpaces_Options.hpp  Kokkos_RemoteSpaces_ViewLayout.hpp  Kokkos_RemoteSpaces_ViewMapping.hpp  Kokkos_RemoteSpaces_ViewOffset.hpp
src/MPI/: Kokkos_MPISpace.cpp  Kokkos_MPISpace.hpp  Kokkos_MPISpace_ViewMapping.hpp
src/MPISPACE/: Kokkos_MPISpace.cpp  Kokkos_MPISpace.hpp  Kokkos_MPISpace_AllocationRecord.cpp  Kokkos_MPISpace_DataHandle.hpp  Kokkos_MPISpace_Ops.hpp  Kokkos_MPISpace_ViewMapping.hpp
src/NVSHMEM/: Kokkos_NVSHMEM_Space.cpp  Kokkos_NVSHMEM_Space.hpp  Kokkos_NVSHMEM_ViewMapping.hpp
src/NVSHMEMSPACE/: Kokkos_NVSHMEMSpace.cpp  Kokkos_NVSHMEMSpace.hpp  Kokkos_NVSHMEMSpace_AllocationRecord.cpp  Kokkos_NVSHMEMSpace_AllocationRecord.hpp  Kokkos_NVSHMEMSpace_Ops.hpp  Kokkos_NVSHMEMSpace_ViewMapping.hpp
src/QUO/: Kokkos_QUOSpace.cpp  Kokkos_QUOSpace.hpp
src/SHMEM/: Kokkos_SHMEMSpace.cpp  Kokkos_SHMEMSpace.hpp  Kokkos_SHMEM_ViewMapping.hpp
src/SHMEMSPACE/: Kokkos_SHMEMSpace.cpp  Kokkos_SHMEMSpace.hpp  Kokkos_SHMEMSpace_AllocationRecord.cpp  Kokkos_SHMEMSpace_Ops.hpp  Kokkos_SHMEMSpace_ViewMapping.hpp  Kokkos_SHMEMSpace_ViewTraits.hpp
src/core/: Kokkos_RemoteSpaces.hpp  Kokkos_RemoteSpaces_DeepCopy.hpp  Kokkos_RemoteSpaces_Error.hpp  Kokkos_RemoteSpaces_Helpers.hpp  Kokkos_RemoteSpaces_LocalDeepCopy.hpp  Kokkos_RemoteSpaces_Options.hpp  Kokkos_RemoteSpaces_ViewLayout.hpp  Kokkos_RemoteSpaces_ViewMapping.hpp  Kokkos_RemoteSpaces_ViewOffset.hpp
tpls/libquo/: BROKEN-COMPILERS  LICENSE  Makefile.am  autogen  configure.ac
tpls/libquo/config/: quo-pkg-hwloc.m4  quo-pkg-mpi.m4
tpls/libquo/demos/: Makefile.am  basic-info.c  caller-driven-ex-common.h  caller-driven-ex-p0.c  caller-driven-ex-p1.h  even-distrib.c  mpi-omp.c  quo-mpi-sub-comm.c  quodemo-1.c
tpls/libquo/demos/mpi-openmp/: dgemv.c  eta.c  eta.h  zeta.c  zeta.h
tpls/libquo/demos/openmp/: Makefile.am  quofort.f90  sample.c
tpls/libquo/docs/: notes.txt
tpls/libquo/docs/builds/: cray-xc30-knl.txt  cray-xc30.txt  cray-xe6.txt  typical.txt
tpls/libquo/pkgconfig/: Makefile.am  libquo.pc.in
tpls/libquo/src/: quo-auto-distrib.c  quo-hwloc.h  quo-mpi.c  quo-mpi.h  quo-private.h  quo-set.h  quo-sm.c  quo-utils.h  quo.c  quo.h
tpls/libquo/src/cxx/: BindGuard.hpp  Context.cpp  Context.hpp  version.cpp  version.hpp
tpls/libquo/src/fortran/: Makefile.am  quof.f90
tpls/libquo/src/tools/: quo-info.c
tpls/libquo/src/xpm/: Makefile.am  quo-xpm.h
tpls/libquo/tests/: trivial.c
unit_tests/: CMakeLists.txt  Makefile  Test_Allocation.cpp  Test_Atomic.cpp  Test_DeepCopy.cpp  Test_Empty.cpp  Test_GlobalViews.cpp  Test_Layouts.cpp  Test_LocalDeepCopy.cpp  Test_LocalDeepCopySubview.cpp  Test_MDRangePolicy.cpp  Test_Main.cpp  Test_PartitionedSubview.cpp  Test_Reduction.cpp  Test_RefCount.cpp  Test_RemoteAccess.cpp  Test_Subview.cpp  Test_ViewInit.cpp
unit_tests/experimental/: Test_CachedView.cpp
(+171 files in other folders)
